Fixed script links Added more homepage content Mobile view is too squished and needs to be redesigned

--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,8 @@
               "node_modules/roboto-fontface/css/roboto/roboto-fontface.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "node_modules/jquery/dist/jquery.min.js"
+              "node_modules/jquery/dist/jquery.slim.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ],
             "es5BrowserSupport": true
           },
