--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
               "node_modules/roboto-fontface/css/roboto/roboto-fontface.css"
             ],
             "scripts": [
+              "src/main.js",
               "node_modules/jquery/dist/jquery.slim.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ],
