Fixed Javascript sidebar functions
Moved teh js file to the assets folder then called the file within the angular.json scripts section. Within the main.ts file the methods were declared and allowed access by any. These functions are called in a component withi the file that exports the functions to be used by the app.

--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
             ],
             "scripts": [
               "src/main.js",
+              "src/assets/mainApp.js",
               "node_modules/jquery/dist/jquery.slim.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ],
