--- a/ks-server/package.json
+++ b/ks-server/package.json
@@ -19,6 +19,7 @@
     "eslint-config-airbnb": "^16.1.0",
     "express": "^4.15.2",
     "express-session": "^1.15.6",
+    "express-winston": "^3.1.0",
     "file-system": "^2.2.2",
     "jade": "~1.11.0",
     "jsonwebtoken": "^7.3.0",
@@ -27,7 +28,7 @@
     "lodash": "^4.17.4",
     "memory": "0.0.3",
     "morgan": "^1.8.1",
-    "mysql": "^2.13.0",
+    "mysql": "^2.16.0",
     "nodemailer": "^4.4.1",
     "nodemon": "^1.18.11",
     "passport": "^0.3.2",
@@ -36,6 +37,7 @@
     "sequelize": "^3.30.2",
     "sequence": "^3.0.0",
     "serve-favicon": "~2.3.0",
-    "when": "^3.7.8"
+    "when": "^3.7.8",
+    "winston": "^3.2.1"
   }
 }
